# DiscordWhitelistBotCpp

./: CMakeLists.txt  ChannelManager.cpp  ChannelManager.h  Channels.h  Configuration.cpp  Configuration.h  Member.cpp  Member.h  MemberManager.cpp  MemberManager.h  README.md  main.cpp
